--- a/Catering.html
+++ b/Catering.html
@@ -2,6 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="The Breakfast Jawn offers delicious breakfast options, exceptional catering services, and career resources for students.">
+    <meta name="keywords" content="Breakfast, Catering, Career Resources, Students, University of South Carolina">
+    <meta name="author" content="The Breakfast Jawn">
+</head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2RW9H5Y7M1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2RW9H5Y7M1');
+</script>
+<head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Breakfast Jawn</title>
 </head>
