--- a/Catering.html
+++ b/Catering.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="description" content="The Breakfast Jawn offers delicious breakfast options, exceptional catering services, and career resources for students.">
     <meta name="keywords" content="Breakfast, Catering, Career Resources, Students, University of South Carolina">
@@ -9,32 +10,91 @@
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-2RW9H5Y7M1"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-2RW9H5Y7M1');
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    
+    gtag('config', 'G-2RW9H5Y7M1');
 </script>
-<head>
-    <meta charset="UTF-8">
-    <meta name="description" content="The Breakfast Jawn offers delicious breakfast options, exceptional catering services, and career resources for students.">
-    <meta name="keywords" content="Breakfast, Catering, Career Resources, Students, University of South Carolina">
-    <meta name="author" content="The Breakfast Jawn">
-</head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-2RW9H5Y7M1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+<style>
+/* Catering section */
+.catering {
+    position: relative;
+    width: 100%;
+}
 
-  gtag('config', 'G-2RW9H5Y7M1');
-</script>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Breakfast Jawn</title>
-</head>
+.catering img {
+    width: 100%;
+    height: auto;
+}
+
+.catering h2 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 200px;
+    font-weight: bold;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+}
+
+/* Services section */
+.services h2 {
+    text-align: center;
+}
+
+/* Catering form */
+.cateringform {
+    background-color: #d3d3d3;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 50%;
+    max-width: 600px;
+    box-sizing: border-box;
+}
+
+.cateringform h2 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.cateringform form {
+    display: flex;
+    flex-direction: column;
+}
+
+.cateringform label {
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+.cateringform input, .cateringform textarea {
+    margin-bottom: 15px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.cateringform input[type="submit"] {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    padding: 15px;
+    cursor: pointer;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+.cateringform input[type="submit"]:hover {
+    background-color: #45a049;
+}
+</style>
 <body>
     <header>
         <h1><a href="index.html"><img src="logo-nobackground-200.png" alt="logo"></a></h1>
@@ -49,17 +109,17 @@
     </header>
 
     <main>
-        <section>
+        <section class="catering">
             <h2>Catering</h2>
             <img src="Truck1.jpg" alt="Truck 1" width="175" height="150">
         </section>
 
-        <section>
+        <section class="services">
             <h2>Services</h2>
             <p>The Breakfast Jawn offers comprehensive catering services for both on-campus student events and off-campus gatherings, accommodating up to 500 people. Our team ensures a seamless experience with a diverse menu tailored to meet the unique needs of each event. Whether it's a small club meeting or a large celebration, we provide delicious, high-quality meals that make every occasion special.</p>
         </section>
 
-        <section>
+        <section class="cateringform">
             <h2>Interest Form</h2>
             <form>
                 <label for="first-name">First Name:</label>
