--- a/index.html
+++ b/index.html
@@ -144,12 +144,11 @@
             <a href="https://www.linkedin.com/company/the-breakfast-jawn/people/"><img src="LinkedInLogo.png" alt="LinkedIn Logo" width="70" height="70"></a>
         </div>
         <h2>Contact Us</h2>
-        <p>Address: 1400 Greene Street, Columbia, SC 29208</p>
         <p>Phone: <a href="tel:8036709620">803-670-9620</a></p>
         <p>Email: <a href="mailto:thebreakfastjawn@gmail.com">thebreakfastjawn@gmail.com</a></p>
 
         <div>
-            <h1><a href="index.html"><img src="logo-nobackground-200.png" alt="logo"></a></h1>
+            <h1 class="logofooter"><a href="index.html"><img src="logo-nobackground-200.png" alt="logo"></a></h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -159,16 +158,14 @@
                 </ul>
             </nav>
         </div>
-        <div class="fright">
-            <h2>Address</h2>
-            <address>
-                <p>1400 Greene Street</p>
-                <p>Columbia, SC 29208</p>
-            </address>
-        </div>
-            <h2>Hours</h2>
-            <p>Monday - Friday: 8:30 a.m. to 1:00 p.m.</p>
-            <p>Saturday - Sunday: Closed</p>
+        <h2>Address</h2>
+        <address>
+            <p>1400 Greene Street</p>
+            <p>Columbia, SC 29208</p>
+        </address>
+        <h2>Hours</h2>
+        <p>Monday - Friday: 8:30 a.m. to 1:00 p.m.</p>
+        <p>Saturday - Sunday: Closed</p>
     </footer>
 </body>
 </html>
