--- a/Catering.html
+++ b/Catering.html
@@ -25,7 +25,7 @@
 
 .catering img {
     width: 100%;
-    height: auto;
+    height: 10%;
 }
 
 .catering h2 {
@@ -103,7 +103,6 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="AboutUs.html">About Us</a></li>
                 <li><a href="Catering.html">Catering</a></li>
-                <li><a href="Careers.html">Careers</a></li>
             </ul>
         </nav>
     </header>
@@ -165,32 +164,20 @@
             <a href="https://www.instagram.com/breakfastjawn/"><img src="InstagramLogo.png" alt="Instagram Logo" width="70" height="70"></a>
             <a href="https://www.linkedin.com/company/the-breakfast-jawn/people/"><img src="LinkedInLogo.png" alt="LinkedIn Logo" width="70" height="70"></a>
         </div>
-        <h5>Contact Us</h5>
+        <h2>Contact Us</h2>
         <p>Address: 1400 Greene Street, Columbia, SC 29208</p>
         <p>Phone: <a href="tel:8036709620">803-670-9620</a></p>
         <p>Email: <a href="mailto:thebreakfastjawn@gmail.com">thebreakfastjawn@gmail.com</a></p>
 
         <div>
-            <h6><a href="index.html"><img src="logo-nobackground-200.png" alt="logo"></a></h6>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="AboutUs.html">About Us</a></li>
                     <li><a href="Catering.html">Catering</a></li>
-                    <li><a href="Careers.html">Careers</a></li>
                 </ul>
             </nav>
         </div>
-
-        <h5>Address</h5>
-        <address>
-            <p>1400 Greene Street</p>
-            <p>Columbia, SC 29208</p>
-        </address>
-
-        <h5>Hours</h5>
-        <p>Monday - Friday: 8:30 a.m. to 1:00 p.m.</p>
-        <p>Saturday - Sunday: Closed</p>
     </footer>
 </body>
 </html>
